# orchestr8

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
api_reference/adapter/: index.html
api_reference/directory-tracker/: index.html
api_reference/execution-runtime/: index.html
api_reference/logger/: index.html
api_reference/oauth-flow/: index.html
api_reference/sandbox-client/: index.html
api_reference/shell/: index.html
cookbooks/: authentication-and-function-calling.ipynb  function-calling-automation.ipynb  index.html  running-llm-generated-code.ipynb  version-control-and-function-calling.ipynb
cookbooks/authentication-and-function-calling/: index.html
cookbooks/function-calling-automation/: index.html
cookbooks/running-llm-generated-code/: index.html
cookbooks/version-control-and-function-calling/: index.html
docs/: index.md  installation.md
docs/api_reference/: adapter.md  directory-tracker.md  execution-runtime.md  logger.md  oauth-flow.md  sandbox-client.md  shell.md
docs/cookbooks/: authentication-and-function-calling.md  function-calling-automation.md  index.md  running-llm-generated-code.md  version-control-and-function-calling.md
docs/tutorial/: adapter.md  directory-tracker.md  execution-runtime.md  index.md  oauth-flow.md  sandbox-client.md  shell.md
installation/: index.html
orchestr8/: __init__.py  _paths.py  directory_tracker.py  logger.py  sandbox_client.py  shell.py
orchestr8/adapter/: __init__.py  base.py  function.py  struct.py  utils.py
orchestr8/execution_runtime/: __init__.py  package_utils.py  stdlib.txt
orchestr8/oauth_flow/: __init__.py  redirect_server.py
search/: search_index.json
static/css/: mkdocstrings.css
tests/: test_adapter.py  test_directory_tracker.py  test_execution_runtime_package_utils.py  test_logger.py  test_oauth_flow.py  test_sandbox_client.py  test_shell.py
tutorial/: index.html
tutorial/adapter/: index.html
tutorial/directory-tracker/: index.html
tutorial/execution-runtime/: index.html
tutorial/oauth-flow/: index.html
tutorial/sandbox-client/: index.html
tutorial/shell/: index.html
